--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -191,6 +191,12 @@
 				margin: $marg-med 0 $marg-sml;
 				overflow: hidden;
 				padding: $pad-med;
+				border-radius: 3px;
+				font-style: normal;
+			}
+
+			blockquote a {
+				color: inherit;
 			}
 
 			p {
@@ -429,9 +435,11 @@
 	margin: 12px 0 10px;
 }
 
-.activity-link-preview-container {
+.activity-link-preview-container,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content {
 	padding: 25px;
 	line-height: 1.5;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	color: #82878c;
 	background: #fff;
 	border: 1px solid #e5e5e5;
@@ -444,7 +452,7 @@
 		border: 0;
 		border-radius: 0;
 		margin: 0;
-                padding: 0;
+        padding: 0;
 		max-width: 640px;
 	}
 
@@ -458,7 +466,7 @@
 	float: left;
 	max-width: 160px;
 	margin-right: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 	position: relative;
 }
 
@@ -472,20 +480,31 @@
 	padding: 0;
 }
 
-.activity-link-preview-title {
-	margin: 0 0 15px;
+.activity-link-preview-title,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p {
 	font-weight: 600;
 	font-size: 22px;
 	line-height: 1.3;
 	color: #32373c;
 }
 
+.activity-link-preview-title {
+	margin: 0 0 15px;	
+}
+
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p {
+	margin: 0;
+}
+
 .activity-link-preview-title a,
-.activity-link-preview-title a:hover {
+.activity-link-preview-title a:hover,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p a,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p a:hover {
 	color: #32373c;
 }
 
-.activity-link-preview-title a:hover {
+.activity-link-preview-title a:hover,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p a:hover {
 	text-decoration: underline !important;
 }
 
@@ -504,7 +523,7 @@
 
 .activity-url-thumb-nav {
 	position: absolute;
-	bottom: 0;
+	bottom: 3px;
 	left: 0;
 	right: 0;
 	margin: auto;
@@ -514,8 +533,8 @@
 #buddypress .activity-url-thumb-nav button {
 	cursor: pointer;
 	width: auto;
-	padding: 2px 10px;
-	margin: 0 5px;
+	padding: 0 6px;
+	margin: 0 3px;
 	height: auto;
 	min-height: 10px;
 }
@@ -524,7 +543,7 @@
 	font-size: 14px;
 	line-height: 1;
 	position: relative;
-	top: 2px;
+	top: 3px;
 }
 
 #activity-url-scrapper-img-count {
@@ -547,7 +566,7 @@
 	color: rgba(0, 0, 0, 0.4);
 	font-size: 16px;
 	position: absolute;
-	left: 8px;
+	left: 3px;
 	top: 8px;
 	text-decoration: none;
 
