--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1522,6 +1522,12 @@ input.search-query-input {
   margin: 15px 0 10px;
   overflow: hidden;
   padding: 1em;
+  border-radius: 3px;
+  font-style: normal;
+}
+
+.activity-list .activity-item .activity-content blockquote a {
+  color: inherit;
 }
 
 .activity-list .activity-item .activity-content p {
@@ -1719,9 +1725,11 @@ input.search-query-input {
   margin: 12px 0 10px;
 }
 
-.activity-link-preview-container {
+.activity-link-preview-container,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content {
   padding: 25px;
   line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: #82878c;
   background: #fff;
   border: 1px solid #e5e5e5;
@@ -1731,7 +1739,8 @@ input.search-query-input {
   zoom: 1;
 }
 
-.activity-video-preview .activity-link-preview-container {
+.activity-video-preview .activity-link-preview-container, .activity-video-preview
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content {
   border: 0;
   border-radius: 0;
   margin: 0;
@@ -1739,7 +1748,8 @@ input.search-query-input {
   max-width: 640px;
 }
 
-.activity-link-preview-container div.fluid-width-video-wrapper {
+.activity-link-preview-container div.fluid-width-video-wrapper,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content div.fluid-width-video-wrapper {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -1748,7 +1758,7 @@ input.search-query-input {
   float: left;
   max-width: 160px;
   margin-right: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   position: relative;
 }
 
@@ -1762,20 +1772,31 @@ input.search-query-input {
   padding: 0;
 }
 
-.activity-link-preview-title {
-  margin: 0 0 15px;
+.activity-link-preview-title,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p {
   font-weight: 600;
   font-size: 22px;
   line-height: 1.3;
   color: #32373c;
 }
 
+.activity-link-preview-title {
+  margin: 0 0 15px;
+}
+
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p {
+  margin: 0;
+}
+
 .activity-link-preview-title a,
-.activity-link-preview-title a:hover {
+.activity-link-preview-title a:hover,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p a,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p a:hover {
   color: #32373c;
 }
 
-.activity-link-preview-title a:hover {
+.activity-link-preview-title a:hover,
+.activity-list .activity-item .activity-content blockquote.wp-embedded-content p a:hover {
   text-decoration: underline !important;
 }
 
@@ -1794,7 +1815,7 @@ input.search-query-input {
 
 .activity-url-thumb-nav {
   position: absolute;
-  bottom: 0;
+  bottom: 3px;
   left: 0;
   right: 0;
   margin: auto;
@@ -1804,8 +1825,8 @@ input.search-query-input {
 #buddypress .activity-url-thumb-nav button {
   cursor: pointer;
   width: auto;
-  padding: 2px 10px;
-  margin: 0 5px;
+  padding: 0 6px;
+  margin: 0 3px;
   height: auto;
   min-height: 10px;
 }
@@ -1814,7 +1835,7 @@ input.search-query-input {
   font-size: 14px;
   line-height: 1;
   position: relative;
-  top: 2px;
+  top: 3px;
 }
 
 #activity-url-scrapper-img-count {
@@ -1837,7 +1858,7 @@ input.search-query-input {
   color: rgba(0, 0, 0, 0.4);
   font-size: 16px;
   position: absolute;
-  left: 8px;
+  left: 3px;
   top: 8px;
   text-decoration: none;
 }
