--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -5,6 +5,21 @@
 	margin-bottom: 20px;
 	display: flex;
 	flex-flow: row wrap;
+
+	@media screen and ( max-width: 540px ) {
+
+		.bb-groups-messages-right #whats-new-toolbar {
+			display: block;
+
+			.post-elements-buttons-item {
+				display: inline-block;
+			}
+
+			#group-messages-new-submit {
+				margin-top: 15px;
+			}
+		}
+	}
 }
 
 .bb-groups-messages-right {
@@ -285,10 +300,12 @@ div#bp-group-message-content {
 	font-size: 15px;
 	margin: 0 auto;
 	width: 100%;
-	> a{
+
+	> a {
 		font-size: 15px;
 		font-weight: 400;
 	}
+
 }
 
 #group-messages-container .bb-groups-messages-left .action button {
