--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -4165,7 +4165,7 @@ div.profile_completion_wrap ul.pc_detailed_progress li.incomplete span.completed
 }
 
 @media screen and (max-width: 540px) {
-  .bp-messages-content .single-message-thread-header .actions a[data-bp-tooltip][data-bp-tooltip-pos=left]:after {
+  .bp-messages-content .single-message-thread-header .actions a[data-bp-tooltip][data-bp-tooltip-pos="left"]:after {
     max-width: 100vw;
     white-space: normal;
     min-width: 200px;
@@ -11645,6 +11645,18 @@ img.emojioneemoji {
   margin-bottom: 20px;
   display: flex;
   flex-flow: row wrap;
+}
+
+@media screen and (max-width: 540px) {
+  #group-messages-container .bb-groups-messages-right #whats-new-toolbar {
+    display: block;
+  }
+  #group-messages-container .bb-groups-messages-right #whats-new-toolbar .post-elements-buttons-item {
+    display: inline-block;
+  }
+  #group-messages-container .bb-groups-messages-right #whats-new-toolbar #group-messages-new-submit {
+    margin-top: 15px;
+  }
 }
 
 .bb-groups-messages-right {
